[tool.poetry]
name = "mydns-jp-ping"
version = "0.1.0"
description = "Tiny script to ping ip address to mydns.jp"
authors = ["TAKAHASHI Shuuji <shuuji3@gmail.com>"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.22"
python-dotenv = "^0.10.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
